--- a/src/components/categories/styles.css
+++ b/src/components/categories/styles.css
@@ -34,3 +34,13 @@
 .categories-list li:last-child {
     border-bottom: 0;
 }
+
+.no-available{
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 20px;
+    color: #656565;
+    padding: 20px; 
+}
